src/Sci.NET.CUDA/Native/ArithmeticNativeMethods.cs

// Copyright (c) Sci.NET Foundation. All rights reserved.
// Licensed under the Apache 2.0 license. See LICENSE file in the project root for full license information.

using System.Runtime.InteropServices;
using Sci.NET.Common.Runtime;

namespace Sci.NET.CUDA.Native;

internal static class ArithmeticNativeMethods
{
    static ArithmeticNativeMethods()
    {
        _ = RuntimeDllImportResolver.LoadLibrary(NativeMethods.NativeLibrary, typeof(NativeMethods).Assembly, "CUDA");
    }

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorFp32(
        float* left,
        float* right,
        float* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorFp64(
        double* left,
        double* right,
        double* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorI16(
        short* left,
        short* right,
        short* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorI32(
        int* left,
        int* right,
        int* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorTensorI64(
        long* left,
        long* right,
        long* result,
        long count);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorFp32(
        float* left,
        float* right,
        float* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorFp64(
        double* left,
        double* right,
        double* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorI16(
        short* left,
        short* right,
        short* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorI32(
        int* left,
        int* right,
        int* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_tensor_broadcast_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddTensorBroadcastTensorI64(
        long* left,
        long* right,
        long* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorFp32(
        float* left,
        float* right,
        float* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorFp64(
        double* left,
        double* right,
        double* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorI16(
        short* left,
        short* right,
        short* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_i32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorI32(
        int* left,
        int* right,
        int* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "add_broadcast_tensor_tensor_i64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AddBroadcastTensorTensorI64(
        long* left,
        long* right,
        long* result,
        long m,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorFp32(
        float* left,
        float* right,
        float* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorFp64(
        double* left,
        double* right,
        double* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_u8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorU8(
        byte* left,
        byte* right,
        byte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_u16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorU16(
        ushort* left,
        ushort* right,
        ushort* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_u32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorU32(
        uint* left,
        uint* right,
        uint* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_u64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorU64(
        ulong* left,
        ulong* right,
        ulong* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_i8", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorI8(
        sbyte* left,
        sbyte* right,
        sbyte* result,
        long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "subtract_tensor_tensor_i16", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SubtractTensorTensorI16(
        short* left,
        short* right,
        short* result,
        long n);
